# VeldoCra

./: .gitignore  CMakeLists.txt  FILE_ASSOCIATION.md  LICENSE.md  PHASE7_AI_TASK_PROMPT.md  PHASE7_KEYWORD_MAPPING.md  PHASE7_SYNTAX_SUMMARY.md  README.md  TODO.md  TODO_Final_Fix.md  TODO_Fix_Infinite_Loop.md  TODO_Fix_Phase12.md  TODO_Fix_Recursion.md  TODO_ICON.md  TODO_Namespace_Fix.md  TODO_Ownership_Activation.md  TODO_Ownership_Activation_Plan.md  TODO_Ownership_Fix.md  TODO_Phase10.md  TODO_Phase11.md  TODO_Phase11_1.md  TODO_Phase11_1_Hybrid_Awakening.md  TODO_Phase12.md  TODO_Phase12_Complete.md  TODO_Phase7_Implementation.md  TODO_Phase7_Manifest.md  TODO_Phase8.md  TODO_Phase9.md  TODO_Segfault_Fix.md  VERSION  icon_plan.md  language-configuration.json  package.json  phase7_plan.md  plan.md  read.md
examples/: absorb_low_level.vel  demon_lord_class.vel  federation_module.vel  soul_manifest.vel
icons/: veldora-icons.json
install-icons/linux/: install.sh  veldora-app.desktop
install-icons/windows/: install.bat
snippets/: veldora.code-snippets
src/: main.cpp
src/driver/: driver.cpp  driver.h
src/velc/: lexer.vel
syntaxes/: veldora-neon.tmLanguage.json  veldora-rainbow.tmLanguage.json  veldora.tmLanguage.json
tests/: comment_test.vel  fibonacci.vel  fizzbuzz.vel  hybrid_no_semicolons.vel  linked_list.vel  minimal_test.vel  mixed_style.vel  no_semicolons.vel  phase7_test.vel  range_test.vel  simple_if.vel  simple_no_semicolon.vel  simple_test.vel  test.vel  tiny.vel  use_after_move_test.vel
themes/: veldocra-neon.json  veldocra-rainbow.json
(+22 files in other folders)
